kubernetes/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
      - host: loki-grafana.ibechuksvictor.live
        http:
          paths:
          - backend:
              service:
                name: loki-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
